[gd_scene load_steps=14 format=3 uid="uid://ytmsdck02hmb"]

[ext_resource type="PackedScene" uid="uid://chgj6eb6pnpbj" path="res://Scenes/base_goblin.tscn" id="1_242ap"]
[ext_resource type="Texture2D" uid="uid://cm3kn8esvvrgq" path="res://Assets/goblin_protector.png" id="2_dub53"]
[ext_resource type="Script" path="res://Scenes/goblin_protector.gd" id="2_q3g04"]
[ext_resource type="Texture2D" uid="uid://dsw7lrnxwsgor" path="res://Assets/platform.png" id="3_53s8w"]
[ext_resource type="AudioStream" uid="uid://dgwpwsa5jpkk" path="res://Assets/sounds/build.wav" id="5_mcs8y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xe2a7"]
size = Vector2(21.8647, 37.6746)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_22g47"]
size = Vector2(45, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v24sh"]
size = Vector2(43, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6cl0"]
size = Vector2(43, 52)

[sub_resource type="Animation" id="Animation_1f3nd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_khs4s"]
resource_name = "idle"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0pn27"]
resource_name = "shoot"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wjlbr"]
_data = {
"RESET": SubResource("Animation_1f3nd"),
"idle": SubResource("Animation_khs4s"),
"shoot": SubResource("Animation_0pn27")
}

[node name="goblin_protector" instance=ExtResource("1_242ap")]
script = ExtResource("2_q3g04")
is_placed = false
type = "protector"

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(-0.5, -15)
scale = Vector2(1.05192, 0.902465)
shape = SubResource("RectangleShape2D_xe2a7")

[node name="Sprite2D" parent="." index="1"]
position = Vector2(0.5, -17)
texture = ExtResource("2_dub53")

[node name="platform_sprite" type="Sprite2D" parent="." index="2"]
position = Vector2(0.5, 27)
texture = ExtResource("3_53s8w")

[node name="hurt_box" parent="." index="3"]
position = Vector2(0, -18)
scale = Vector2(1.10479, 1.0281)

[node name="vision_box" type="Area2D" parent="." index="4"]
position = Vector2(0.5, 27)
collision_layer = 4
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="vision_box" index="0"]
position = Vector2(0, -49)
polygon = PackedVector2Array(0, -9, 74, -80, 93, -51, 103, -18, 95, 23, 79.5, 85, 31.5, 85, 0, 6)

[node name="placement_detection" type="Area2D" parent="." index="5"]
position = Vector2(0.5, 27)

[node name="CollisionShape2D" type="CollisionShape2D" parent="placement_detection" index="0"]
position = Vector2(0, 22.5)
shape = SubResource("RectangleShape2D_22g47")
debug_color = Color(0.34902, 0.529412, 0, 0.419608)

[node name="building_detection" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="building_detection" index="0"]
position = Vector2(0.5, 27)
shape = SubResource("RectangleShape2D_v24sh")
debug_color = Color(0.729412, 0.47451, 0.0431373, 0.419608)

[node name="no_build_zone" type="Area2D" parent="." index="7" groups=["no_build_zone"]]
collision_layer = 32
collision_mask = 0

[node name="no_build_zone_collision" type="CollisionShape2D" parent="no_build_zone" index="0"]
position = Vector2(0.5, 27)
shape = SubResource("RectangleShape2D_n6cl0")
disabled = true
debug_color = Color(0.972549, 0, 0.443137, 0.419608)

[node name="aim_markers" type="Node2D" parent="." index="8"]

[node name="aim_marker_right" type="Marker2D" parent="aim_markers" index="0"]
position = Vector2(12, -19)

[node name="aim_marker_left" type="Marker2D" parent="aim_markers" index="1"]
position = Vector2(-12, -19)

[node name="reload_timer" type="Timer" parent="." index="9"]
one_shot = true

[node name="turn_timer" type="Timer" parent="." index="10"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="11"]
libraries = {
"": SubResource("AnimationLibrary_wjlbr")
}

[node name="sound_fx" type="AudioStreamPlayer" parent="." index="12"]
stream = ExtResource("5_mcs8y")
volume_db = -8.0
bus = &"SFX"
